microsoft-365-ops/3.0/modules/ROOT/pages/microsoft-365-ops-connector-reference.adoc
= Microsoft Dynamics 365 For Operations Connector 3.0 Reference - Mule 4
:page-aliases: connectors::microsoft/microsoft-365-ops-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Microsoft Dynamics 365 for Finance and Operations (Microsoft Dynamics 365 for Operations Connector) enables integration with Microsoft Dynamics 365 for Operations Web API.


[[dynamics-365-for-operations]]
== Microsoft Dynamics 365 For Operations Configurations

=== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Dynamics365ForOperations_OauthClientCredentials, OAuth Client Credentials>> {nbsp}
* <<Dynamics365ForOperations_Oauth2, Oauth2>> 
* <<Dynamics365ForOperations_Oauth2UserPassword, (DEPRECATED) Oauth Username Password>> 
 | The connection types to provide for this configuration. | | *x*
| Name a| String |  The identifier of this element, by which other components reference it.  |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types

[[Dynamics365ForOperations_OauthClientCredentials]]
=== OAuth Client Credentials

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Resource a| String | App ID URI of the web API |  | *x*
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | 
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer will wait for a response before it times out. Default value is `0`, which means infinite. |  0 | 
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the *Read Timeout* parameter. |  SECONDS | 
| Host a| String |  Hostname of the proxy if a proxy is used. If this property is not set, then no proxy is used. |  | 
| Port a| Number |  Port number of the proxy. If the *Host* value is specified, this property is required and cannot be a negative number. |  | 
| Username a| String |  Username used to authenticate against the proxy. Required if a proxy is used. If this property is not set, then no authentication is used against the proxy.  |  | 
| Password a| String |  Password used to authenticate against the proxy. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Client Id a| String | OAuth client ID as registered with the service provider. |  | *x*
| Client Secret a| String |  The OAuth client secret as registered with the service provider |  | *x*
| Token Url a| String |  The service provider's token endpoint URL |  `\https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token` | 
| Scopes a| String |  OAuth scopes to request during the OAuth dance. If not provided, it defaults to the scopes specified in the annotation. |  | 
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  | 
|===

[[dynamics-365-for-operations_oauth2]]
=== OAuth 2.0

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Scope a| String | OpenID Connect scope.  |  openid |
| Resource a| String | OAuth endpoint URL. |  | x
| Response Type a| String | Tells the authorization server what parameters to return from the authorization endpoint.  |  query |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | 
| Read Timeout a| Number |  Specifies the amount of time in milliseconds that the consumer waits for a response before it times out. Default value is `0`, which means infinite. |  0 |
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the *Connection Timeout* and *Read Timeout* parameters. |  `SECONDS` | 
| Host a| String |  Hostname of the proxy if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number |  Port number of the proxy. If the *Host* value is specified, this property is required and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. Required if a proxy is used. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the app is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  OAuth consumer key as registered with the service provider. |  | x
| Consumer Secret a| String |  OAuth consumer secret as registered with the service provider. |  | x
| Authorization Url a| String |  Service provider's authorization endpoint URL. |  `+https://login.microsoftonline.com/{tenant}/oauth2/authorize+` |
| Access Token Url a| String |  Service provider's access token endpoint URL. |  `+https://login.microsoftonline.com/{tenant}/oauth2/token+` |
| Scopes a| String |  OAuth scopes to request during the OAuth dance. If not provided, it defaults to the scopes provided in the annotation. |  |
| Resource Owner Id a| String |  Resource Owner ID that each component uses if a reference is not otherwise provided.  |  |
| Before a| String | Name of the flow to execute before starting the OAuth dance. |  |
| After a| String |  Name of the flow to execute immediately after an access token is received. |  |
| Listener Config a| String |  A reference to a <http:listener-config /> to use to create the listener for the access token callback endpoint. |  | x
| Callback Path a| String |  Path of the access token callback endpoint. |  | x
| Authorize Path a| String | Path of the local HTTP endpoint that triggers the OAuth dance. |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or accessible through a non direct URL, use this parameter to tell the OAuth provider the URL to use to access the callback. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

[[dynamics-365-for-operations_oauth2-user-password]]
===== OAuth Username Password (Deprecated)

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<Tls>> |  If the HTTPS was configured as protocol, then the user needs to configure at least the keystore configuration |  | {nbsp}
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer will wait for a response before it times out. Default value is 0, which means infinite. |  0 | {nbsp}
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to be used for the Read Timeout parameter |  SECONDS | {nbsp}
| Host a| String |  Hostname of the proxy. If this property is not set then no proxy will be used, otherwise a proxy will be used, but a proxy host must be specified. |  | {nbsp}
| Port a| Number |  Port of the proxy. If host is set then this property must be set and cannot be a negative number. |  | {nbsp}
| Username a| String |  Username used to authenticate against the proxy. If this property is not set then no authentication is going to be used against the proxy, otherwise this value must be specified. |  | {nbsp}
| Password a| String |  Password used to authenticate against the proxy. |  | {nbsp}
| Username a| String |  Username used to initialize the session |  | *x*{nbsp}
| Password a| String |  Password used to authenticate the user |  | *x*{nbsp}
| Resource a| String |  The App ID URI of the web API (secured resource). |  | *x*{nbsp}
| Client Id a| String |  The Application Id assigned to your app when you registered it with Azure AD. You can find this in the Azure Portal. Click Active Directory, click the directory, choose the application, and click Configure. |  | *x*{nbsp}
| Client Secret a| String |  The Application Secret that you created in the app registration portal for your app. It should not be used in a native app, because client_secrets cannot be reliably stored on devices. It is required for web apps and web APIs, which have the ability to store the client_secret securely on the server side. |  | *x*{nbsp}
| Token Request Endpoint a| String |  The endpoint where the authorization request should be sent. |  | *x*{nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | {nbsp}
| Connection Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer will attempt to establish a connection before it times out. Default value is 0, which means infinite. |  0 | {nbsp}
| Connection Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to be used for the Connection parameter |  SECONDS | {nbsp}
|===

== List of Operations

* <<executeOperation>>
* <<importDataRecurringJob>>
* <<retrieveMultiple>>
* <<retrieveMultipleByQuery>>
* <<unauthorize>>

[[executeOperation]]
=== Execute Operation

`<dynamics365ForOperations:execute-operation>`

Executes a request against a URL in the `+https://host_uri/api/Services/service_group_name/service_group_service_name/operation_name+` format.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Parameters a| Object |  Parameters of the operation to execute. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Service Group a| String |  The service group name (first level metadata key). |  | x
| Service Name a| String |  The service name (second level metadata key). |  | x
| Operation a| String |  The operation name (third level metadata key). |  | x
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. | #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:CONNECTIVITY {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_INPUT {nbsp}
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED {nbsp}
* DYNAMICS365FOROPERATIONS:NOT_FOUND {nbsp}
* DYNAMICS365FOROPERATIONS:RETRY_EXHAUSTED {nbsp}
* DYNAMICS365FOROPERATIONS:TIMEOUT {nbsp}

[[importDataRecurringJob]]
=== Import Data Recurring Job

`<dynamics365ForOperations:import-data-recurring-job>`

Facilitates submitting data to recurring data jobs.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Uri Path a| String |  Import URI, for example: `:/api/connector/enqueue/` |  `api/connector/enqueue/` |
| Activity Id a| String |  Activity ID. |  | x
| Entity Name a| String |  Entity name. |  | x
| File input a| Binary |  Data to submit. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:CONNECTIVITY {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_INPUT {nbsp}
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED {nbsp}
* DYNAMICS365FOROPERATIONS:NOT_FOUND {nbsp}
* DYNAMICS365FOROPERATIONS:RETRY_EXHAUSTED {nbsp}
* DYNAMICS365FOROPERATIONS:TIMEOUT {nbsp}

[[retrieveMultiple]]
=== Retrieve Multiple

`<dynamics365ForOperations:retrieve-multiple>`

Retrieve multiple entities by URL.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Data Query URL a| String |  The URL, in ODATA format, to use to retrieve the entities. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:CONNECTIVITY {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_INPUT {nbsp}
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED {nbsp}
* DYNAMICS365FOROPERATIONS:NOT_FOUND {nbsp}
* DYNAMICS365FOROPERATIONS:TIMEOUT {nbsp}


[[retrieveMultipleByQuery]]
=== Retrieve Multiple By Query

`<dynamics365ForOperations:retrieve-multiple-by-query>`

Retrieve multiple entities by DSQL query.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| DataSense Query a| String |  The DSQL query to use to retrieve entities. The query is transformed into a URL internally. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

==== For Configurations

* <<dynamics-365-for-operations>>

==== Throws

* DYNAMICS365FOROPERATIONS:CONNECTIVITY {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CONNECTION {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_CREDENTIALS {nbsp}
* DYNAMICS365FOROPERATIONS:INVALID_INPUT {nbsp}
* DYNAMICS365FOROPERATIONS:LOGIN_FAILED {nbsp}
* DYNAMICS365FOROPERATIONS:NOT_FOUND {nbsp}
* DYNAMICS365FOROPERATIONS:TIMEOUT {nbsp}


[[unauthorize]]
=== Unauthorize

`<dynamics365ForOperations:unauthorize>`

Deletes all of the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Resource Owner Id a| String | ID of the resource owner for whom to invalidate access |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
|===


==== For Configurations

* <<dynamics-365-for-operations>>

== Types

[[Tls]]
=== TLS

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context |  | 
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context |  | 
| Trust Store a| <<TrustStore>> |  |  | 
| Key Store a| <<KeyStore>> |  |  | 
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  | 
|===

[[TrustStore]]
=== Truststore

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location, which is resolved relative to the current classpath and file system, if possible, of the truststore. |  | 
| Password a| String | The password used to protect the truststore. |  | 
| Type a| String | The type of truststore used. |  | 
| Algorithm a| String | The algorithm used by the truststore. |  | 
| Insecure a| Boolean | If `true`, no certificate validations are performed, which renders connections vulnerable to attacks. Use at your own risk. |  | 
|===

[[KeyStore]]
=== Keystore

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location, which is resolved relative to the current classpath and file system, if possible, of the keystore. |  | 
| Type a| String | The type of keystore used. |  | 
| Alias a| String | When the keystore contains many private keys, this attribute specifies the alias of the key to use. If not specified, the first key in the file is used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the keystore. |  | 
| Algorithm a| String | The algorithm used by the keystore. |  | 
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | If `true`, only verifies the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | If `true`, try CRL first, then OCSP. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can't be reached or is busy. |  | 
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  | 
|===

[[crl-file]]
=== CRL File

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|===


[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the app is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the *Max Idle Time* attribute. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In-Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. | 100 |
| Buffer Size Increment a| Number | Specifies how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer does not expand, and that a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised when the buffer gets full. Default value is 100 instances. |100  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used, then a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised. A value of less than or equal to zero means there is no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | The maximum number of instances to keep in memory. If more than is required, then content is buffered on to the disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which *Max In Memory Size* is expressed. |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
